--- a/source/sass/blocks/_common/contacts.scss
+++ b/source/sass/blocks/_common/contacts.scss
@@ -11,8 +11,7 @@
 .contacts__text-box {
   position: relative;
   display: flex;
-  padding: 27px 20px 24px;
-  margin-bottom: -38px;
+  padding: 26px 20px 25px;
   line-height: 20px;
 
   &--white {
@@ -23,7 +22,6 @@
     justify-content: space-between;
     align-items: center;
     padding: 60px 70px 55px;
-    margin-bottom: -4px;
 
     &--white {
       background-color: #ffffff;
@@ -80,8 +78,12 @@
 }
 
 .contacts__map {
-  height: 400px;
+  height: 362px;
   background-color: #fdf7ef;
+
+  @include tablet {
+    height: 394px;
+  }
 
   @include desktop {
     position: absolute;
