--- a/source/sass/blocks/catalog/additional-goods.scss
+++ b/source/sass/blocks/catalog/additional-goods.scss
@@ -4,25 +4,43 @@
   @include tablet {
     padding-bottom: 75px;
   }
+
+  @include desktop {
+    padding-bottom: 85px;
+  }
+}
+
+.additional-goods__wrapper {
+  @include desktop {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .additional-goods__title {
   margin-top: 29px;
-  margin-bottom: 28px;
+  margin-bottom: 33px;
 
   @include tablet {
     margin-top: 37px;
-    margin-bottom: 75px;
+    margin-bottom: 80px;
+  }
+
+  @include desktop {
+    margin-top: 45px;
   }
 }
 
 .additional-goods__list {
   @include reset-list;
-  padding-top: 5px;
   margin-bottom: 39px;
 
   @include tablet {
     margin-bottom: 69px;
+  }
+
+  @include desktop {
+    margin-bottom: 0;
   }
 }
 
@@ -44,6 +62,12 @@
     align-content: center;
     align-items: center;
   }
+
+  @include desktop {
+    padding: 15px 0 16px;
+    border-left: 0;
+    border-right: 0;
+  }
 }
 
 .additional-goods__name {
@@ -52,6 +76,10 @@
 
   @include tablet {
     margin: 10px 0 10px;
+  }
+
+  @include desktop {
+    width: 325px;
   }
 }
 
@@ -65,17 +93,33 @@
 
   @include tablet {
     width: auto;
+    margin-top: 8px;
     margin-bottom: 0;
+  }
+
+  @include desktop {
+    width: 325px;
   }
 }
 
 .additional-goods__price {
-  min-width: 95px;
+  flex-shrink: 0;
+  width: 95px;
   text-align: right;
+
+  @include desktop {
+    text-align: left;
+    width: 80px;
+  }
 }
 
 .additional-goods__btn {
   @include tablet {
     margin: 15px 0;
+  }
+
+  @include desktop {
+    margin: 0;
+    width: 245px;
   }
 }
