--- a/source/sass/blocks/catalog/promotion.scss
+++ b/source/sass/blocks/catalog/promotion.scss
@@ -2,34 +2,38 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 15px 0 30px;
   background: url("../img/gift-photo-mobile@1x.jpg") no-repeat center;
   background-size: cover;
 
   @include tablet {
     flex-direction: row;
     justify-content: space-between;
+    padding-bottom: 25px;
+  }
+
+  @include desktop {
+    flex-direction: column;
+    justify-content: flex-start;
   }
 
   &::before {
-    flex-grow: 1;
     content: "";
-    margin: 65px 0;
+    margin: 50px 0 50px;
     display: block;
     width: 240px;
     height: 60px;
     background: url("../img/icon-gift.svg") no-repeat center;
+  }
 
-    @include tablet {
-      flex-grow: 0;
-      margin-bottom: 75px;
-    }
+  @include desktop {
+    width: 245px;
   }
 }
 
 .promotion__text {
   flex-grow: 1;
-  margin: 0;
-  padding-bottom: 45px;
+  margin: 15px 0;
   text-align: center;
   font-family: $arial;
   line-height: 18px;
@@ -38,8 +42,13 @@
 
   @include tablet {
     flex-grow: 0;
-    padding-bottom: 0;
+    margin-top: 25px;
     width: 285px;
     text-align: left;
+  }
+
+  @include desktop {
+    margin-top: 15px;
+    text-align: center;
   }
 }
