--- a/source/sass/blocks/_common/rights-owner.scss
+++ b/source/sass/blocks/_common/rights-owner.scss
@@ -15,11 +15,20 @@
   font-family: "Arial", sans-serif;
   text-decoration: none;
   color: $darkgrey;
+
+  &:hover .rights-owner__logo {
+    fill: $green;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 .rights-owner__logo {
   width: 27px;
   height: 34px;
+  fill: #666666;
 
   @include tablet {
     margin-left: 22px;
