--- a/source/sass/blocks/index/slider.scss
+++ b/source/sass/blocks/index/slider.scss
@@ -165,7 +165,7 @@
     width: 35px;
     height: 6px;
     border-radius: 3px;
-    background-color: #68b738;
+    background-color: $green;
     cursor: pointer;
 
     @include tablet {
