--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -1,11 +1,17 @@
 @font-face {
-  font-family: "Oswald Regular";
-  src: url("../../fonts/oswaldregular.woff2") format("woff2"),
-    url("../../fonts/oswaldregular.woff") format("woff");
+  font-family: "Oswald";
+  src: local("Oswald"),
+    url("../fonts/oswaldregular.woff2") format("woff2"),
+    url("../fonts/oswaldregular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
 }
 
 @font-face {
-  font-family: "Oswald Medium";
-  src: url("../../fonts/oswaldmedium.woff2") format("woff2"),
-    url("../../fonts/oswaldmedium.woff") format("woff");
+  font-family: "Oswald";
+  src: local("Oswald"),
+    url("../fonts/oswaldmedium.woff2") format("woff2"),
+    url("../fonts/oswaldmedium.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
 }
