--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -4,10 +4,10 @@ $darkgrey: #444444;
 $grey: #f2f2f2;
 $border-grey: #cdcdcd;
 $green: #68b738;
+$red: #ff8282;
 
 //Fonts
-$regular: "Oswald Regular", "Arial", sans-serif;
-$medium: "Oswald Medium", "Arial", sans-serif;
+$oswald: "Oswald", "Arial Narrow", sans-serif;
 $arial: "Arial", sans-serif;
 
 //Viewports
