--- a/source/sass/blocks/index/program.scss
+++ b/source/sass/blocks/index/program.scss
@@ -23,7 +23,7 @@
   @include tablet {
     position: relative;
     margin-bottom: 30px;
-    padding: 55px 285px 43px 50px;
+    padding: 55px 285px 40px 50px;
 
     &--pro {
       padding-right: 315px;
@@ -113,15 +113,16 @@
   border-bottom: 1px solid #d9d9d9;
 
   @include tablet {
-    margin-top: 3px;
-    margin-bottom: 35px;
+    padding-top: 5px;
+    padding-bottom: 35px;
     font-size: 16px;
     line-height: 1.5;
+    border-bottom: 0;
   }
 
   @include desktop {
-    margin-top: 18px;
-    margin-bottom: 18px;
+    padding-top: 18px;
+    padding-bottom: 18px;
   }
 }
 
@@ -136,6 +137,7 @@
 
   &::before,
   &::after {
+    display: block;
     content: "";
     transition: all 0.2s ease-out;
   }
