--- a/source/sass/blocks/index/slider.scss
+++ b/source/sass/blocks/index/slider.scss
@@ -48,6 +48,7 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
+  transition: all 0.3s linear;
 
   &--after {
     width: 0;
@@ -114,17 +115,17 @@
   padding: 2px;
 
   @include tablet {
-    margin-top: 20px;
-    margin-bottom: 37px;
+    margin-top: 15px;
+    margin-bottom: 30px;
   }
 
   @include desktop {
-    margin-top: 40px;
+    margin-top: 33px;
   }
 }
 
 .slider__btn {
-  width: 78px;
+  margin: 0 20px;
   line-height: 1.25;
   text-align: center;
   text-transform: uppercase;
@@ -133,9 +134,18 @@
   z-index: 1;
 
   @include tablet {
-    width: 92px;
+    padding: 6px 0;
     font-size: 20px;
     line-height: 1;
+    border-bottom: 1px dotted rgba(0, 0, 0, 0.3);
+
+    &:hover {
+      border-bottom-style: solid;
+    }
+
+    &:active {
+      border-bottom: 0;
+    }
   }
 }
 
@@ -155,29 +165,46 @@
     background-color: #dcdcdc;
     border-color: #dcdcdc;
   }
+}
 
-  &::after {
-    position: absolute;
-    top: 3px;
-    left: 6px;
-    content: "";
-    display: block;
-    width: 35px;
-    height: 6px;
-    border-radius: 3px;
-    background-color: $green;
-    cursor: pointer;
+.slider__grip {
+  position: absolute;
+  top: 3px;
+  left: 6px;
+  content: "";
+  display: block;
+  width: 35px;
+  height: 6px;
+  border-radius: 3px;
+  background-color: $green;
+  cursor: pointer;
 
-    @include tablet {
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 34px;
-      height: 34px;
-      background-image: radial-gradient($green 0, $green 4px, #ffffff 5px, #ffffff 100%);
-      border: 1px solid $border-grey;
-      border-radius: 50%;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+  @include tablet {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 34px;
+    height: 34px;
+    background-image: radial-gradient($green 0, $green 4px, #ffffff 5px, #ffffff 100%);
+    border: 1px solid $border-grey;
+    border-radius: 50%;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+
+    &:hover {
+      box-shadow: 0 3px 5px rgba(0, 0, 0, 0.25);
+    }
+
+    &:active {
+      border: 2px solid $green;
+      box-shadow: 0 4px 5px rgba(0, 0, 0, 0.3);
     }
   }
+}
+
+.slider__before:checked ~ .slider__actions .slider__grip {
+  left: 0;
+}
+
+.slider__after:checked ~ .slider__actions .slider__grip {
+  left: 100%;
 }
