--- a/source/sass/blocks/index/program.scss
+++ b/source/sass/blocks/index/program.scss
@@ -15,6 +15,7 @@
   margin-bottom: 20px;
   padding: 20px 20px 0;
   background-color: $grey;
+  overflow: hidden;
 
   &:last-child {
     margin-bottom: 9px;
