--- a/source/sass/blocks/catalog/more-products.scss
+++ b/source/sass/blocks/catalog/more-products.scss
@@ -1,9 +1,8 @@
 .more-products {
-  text-align: center;
-
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
 }
 
 
@@ -55,7 +54,7 @@
   }
 
   @include desktop {
-    width: auto;
+    width: 100%;
   }
 }
 
