--- a/source/sass/blocks/index/intro.scss
+++ b/source/sass/blocks/index/intro.scss
@@ -66,7 +66,7 @@
   @include tablet {
     order: 2;
     margin-top: -80px;
-    margin-left: -10px;
+    //margin-left: -10px;
     margin-bottom: 0;
     z-index: -1;
   }
