--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -17,3 +17,5 @@ $tablet-width: 768px;
 $tablet-pads: 30px;
 $desktop-width: 1300px;
 $desktop-pads: 40px;
+$retina-dpi: 144dpi;
+$retina-dppx: 1.5dppx;
