--- a/source/sass/blocks/_common/page-nav.scss
+++ b/source/sass/blocks/_common/page-nav.scss
@@ -29,11 +29,14 @@
   margin: 0 -20px;
   padding: 0;
   list-style: none;
-  transition: height 0.5s ease-out;
 
   .page-nav--no-js &,
   .page-nav--opened & {
     display: block;
+
+    @include tablet {
+      display: flex;
+    }
   }
 
   @include tablet {
