--- a/source/sass/blocks/index/program.scss
+++ b/source/sass/blocks/index/program.scss
@@ -131,6 +131,7 @@
   display: flex;
   align-items: center;
   padding: 20px 0;
+  margin-bottom: 1px;
   text-decoration: none;
   color: $black;
   text-transform: uppercase;
