--- a/source/sass/blocks/index/feature.scss
+++ b/source/sass/blocks/index/feature.scss
@@ -74,6 +74,7 @@
     background-color: $green;
     background-repeat: no-repeat;
     background-position: center;
+    background-size: 50px;
 
     @include tablet {
       width: 80px;
@@ -84,18 +85,34 @@
 
   &--leaf::before {
     background-image: url("../img/advantage-leaf@1x.png");
+
+    @include retina {
+      background-image: url("../img/advantage-leaf@2x.png");
+    }
   }
 
   &--powder::before {
     background-image: url("../img/advantage-powder@1x.png");
+
+    @include retina {
+      background-image: url("../img/advantage-powder@2x.png");
+    }
   }
 
   &--dining::before {
     background-image: url("../img/advantage-dining@1x.png");
+
+    @include retina {
+      background-image: url("../img/advantage-dining@2x.png");
+    }
   }
 
   &--clock::before {
     background-image: url("../img/advantage-clock@1x.png");
+
+    @include retina {
+      background-image: url("../img/advantage-clock@2x.png");
+    }
   }
 }
 
