--- a/source/sass/blocks/catalog/promotion.scss
+++ b/source/sass/blocks/catalog/promotion.scss
@@ -3,18 +3,34 @@
   flex-direction: column;
   align-items: center;
   padding: 15px 0 30px;
-  background: url("../img/gift-photo-mobile@1x.jpg") no-repeat center;
+  background-image: url("../img/gift-photo-mobile@1x.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
+
+  @include retina {
+    background-image: url("../img/gift-photo-mobile@2x.jpg");
+  }
 
   @include tablet {
     flex-direction: row;
     justify-content: space-between;
     padding-bottom: 25px;
+    background-image: url("../img/gift-photo-tablet@1x.jpg");
+
+    @include retina {
+      background-image: url("../img/gift-photo-tablet@2x.jpg");
+    }
   }
 
   @include desktop {
     flex-direction: column;
     justify-content: flex-start;
+    background-image: url("../img/gift-photo-desktop@1x.jpg");
+
+    @include retina {
+      background-image: url("../img/gift-photo-desktop@2x.jpg");
+    }
   }
 
   &::before {
