--- a/source/sass/blocks/index/intro.scss
+++ b/source/sass/blocks/index/intro.scss
@@ -34,7 +34,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding-left: 120px;
+    padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 2px;
     text-align: left;
@@ -65,29 +65,40 @@
   }
 }
 
+.intro__image-wrapper {
+  @include tablet {
+    display: flex;
+    justify-content: center;
+    order: 2;
+    width: 100%;
+  }
+}
+
+.intro__content {
+  @include tablet {
+    margin-left: 100px;
+  }
+}
+
 .intro__image {
   margin: 0 auto;
   margin-bottom: 2px;
-  //width: 100%;
-  max-width: 630px;
   height: auto;
 
   @include tablet {
-    order: 2;
+    width: auto;
     margin-top: -80px;
-    margin-bottom: 0;
-    width: 100%;
     z-index: -1;
   }
 
   @include desktop {
     position: absolute;
     top: 0;
-    left: 520px;
-    margin-top: 0;
-    margin-bottom: 55px;
-    width: 525px;
-    height: 500px;
+    left: 490px;
+    margin-top: 5px;
+    margin-bottom: 50px;
+    width: 552px;
+    height: 499px;
   }
 }
 
