--- a/source/sass/blocks/catalog/product.scss
+++ b/source/sass/blocks/catalog/product.scss
@@ -12,20 +12,24 @@
   justify-content: center;
   flex-grow: 1;
   min-width: 50%;
+  height: 144px;
 
   @include tablet {
-    align-self: center;
-    margin-top: -130px;
-    padding-bottom: 40px;
+    align-items: flex-end;
+    padding-bottom: 33px;
+    width: 100%;
+    height: 87px;
   }
 
-  & > img {
-    height: 144px;
-    vertical-align: bottom;
+  & > picture {
+    margin-left: -40px;
+    margin-right: -40px;
+  }
 
+  & > picture img {
     @include tablet {
-      width: auto;
-      height: 210px;
+      width: 100%;
+      height: auto;
     }
   }
 }
