Добавил на страницы интерактивную карту, поправил бэкграунд карты с пином и отступы до неё

--- a/source/sass/blocks/index/feature.scss
+++ b/source/sass/blocks/index/feature.scss
@@ -31,7 +31,7 @@
     position: relative;
     flex-direction: column;
     align-items: flex-start;
-    margin: 38px 0;
+    margin: 37px 0 38px;
     padding-bottom: 60px;
     width: 325px;
     counter-increment: feature_num;
