Добавил сжатые webp изображения к остальным в тегах picture

--- a/source/sass/blocks/index/example.scss
+++ b/source/sass/blocks/index/example.scss
@@ -68,6 +68,7 @@
 .example__achievements {
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
   padding: 10px 0;
 
   @include desktop {
