--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,6 +2,7 @@
 @import "global/variables";
 @import "global/fonts";
 @import "global/mixins";
+@import "global/animations";
 @import "global/base";
 @import "blocks/_common/theme";
 @import "blocks/_common/page-header";
