Изменил и анимировал кнопку переключения меню

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -8,6 +8,7 @@
 @import "blocks/_common/page-header";
 @import "blocks/_common/page-footer";
 @import "blocks/_common/page-logo";
+@import "blocks/_common/menu-toggle";
 @import "blocks/_common/page-nav";
 @import "blocks/_common/contacts";
 @import "blocks/_common/socials";
