Минифицировал html файлы, оптимизировал загрузку шрифтов и стилей

--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -1,17 +1,19 @@
 @font-face {
+  font-weight: 400;
   font-family: "Oswald";
+  font-style: normal;
+  font-display: swap;
   src: local("Oswald"),
     url("../fonts/oswaldregular.woff2") format("woff2"),
     url("../fonts/oswaldregular.woff") format("woff");
-  font-weight: 400;
-  font-style: normal;
 }
 
 @font-face {
+  font-weight: 600;
   font-family: "Oswald";
+  font-style: normal;
+  font-display: swap;
   src: local("Oswald"),
     url("../fonts/oswaldmedium.woff2") format("woff2"),
     url("../fonts/oswaldmedium.woff") format("woff");
-  font-weight: 600;
-  font-style: normal;
 }
