Добавил чекбоксам и радио состояния по нажатию и фокусу

--- a/source/sass/blocks/form/form-unit.scss
+++ b/source/sass/blocks/form/form-unit.scss
@@ -244,6 +244,15 @@
   &:hover::before {
     border-color: #bababa;
   }
+
+  &:active {
+    opacity: 0.3;
+  }
+
+  input:focus + &::before {
+    border-color: $darkgrey;
+    box-shadow: inset 0 0 0 1px $darkgrey;
+  }
 }
 
 .form-unit__label--radio::before {
