--- a/css/style.css
+++ b/css/style.css
@@ -467,6 +467,10 @@ template {
   display: none;
 }
 
+:root {
+  --track-height: 8px;
+}
+
 @font-face {
   font-weight: 400;
   font-family: "Oswald";
@@ -565,113 +569,6 @@ img {
   width: 100vw;
   margin-right: -50vw; 
   margin-left: -50vw;
-}
-
-[type="range"] {
-  width: 100%; 
-  margin: 12px 0;
-
-  -webkit-appearance: none;
-}
-[type="range"]:focus {
-  outline: 0;
-}
-[type="range"]:focus::-webkit-slider-runnable-track {
-  background: #fbfbfc;
-}
-[type="range"]:focus::-ms-fill-lower {
-  background: #eceff1;
-}
-[type="range"]:focus::-ms-fill-upper {
-  background: #fbfbfc;
-}
-[type="range"]::-webkit-slider-runnable-track {
-  width: 100%;
-  height: 8px;
-
-  background: #eceff1;
-  border: 2px solid #cfd8dc;
-  border-radius: 5px; 
-  -webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2), 0 0 1px rgba(13, 13, 13, 0.2);
-          box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2), 0 0 1px rgba(13, 13, 13, 0.2);
-  cursor: pointer;
-
-  -webkit-transition: all 0.2s ease;
-          transition: all 0.2s ease;
-}
-[type="range"]::-webkit-slider-thumb {
-  width: 24px;
-  height: 24px;
-  margin-top: -10px; 
-
-  background: #607d8b;
-  border: 2px solid #eceff1;
-  border-radius: 12px;
-  -webkit-box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2), 0 0 4px rgba(13, 13, 13, 0.2);
-          box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2), 0 0 4px rgba(13, 13, 13, 0.2);
-  cursor: pointer;
-
-  -webkit-appearance: none;
-}
-[type="range"]::-moz-range-track {
-  width: 100%;
-  height: 8px;
-
-  background: #eceff1;
-  border: 2px solid #cfd8dc;
-  border-radius: 5px; 
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2), 0 0 1px rgba(13, 13, 13, 0.2);
-  cursor: pointer;
-
-  -webkit-transition: all 0.2s ease;
-          transition: all 0.2s ease;
-}
-[type="range"]::-moz-range-thumb {
-  width: 24px; 
-  height: 24px;
-
-  background: #607d8b;
-  border: 2px solid #eceff1;
-  border-radius: 12px;
-  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2), 0 0 4px rgba(13, 13, 13, 0.2);
-  cursor: pointer;
-}
-[type="range"]::-ms-track {
-  width: 100%;
-  height: 8px;
-
-  color: transparent; 
-
-  background: transparent;
-  border-width: 12px 0;
-  border-color: transparent;
-  cursor: pointer;
-
-  -webkit-transition: all 0.2s ease;
-          transition: all 0.2s ease;
-}
-[type="range"]::-ms-fill-lower {
-  background: #dde3e6;
-  border: 2px solid #cfd8dc;
-  border-radius: 10px; 
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2), 0 0 1px rgba(13, 13, 13, 0.2);
-}
-[type="range"]::-ms-fill-upper {
-  background: #eceff1;
-  border: 2px solid #cfd8dc;
-  border-radius: 10px; 
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2), 0 0 1px rgba(13, 13, 13, 0.2);
-}
-[type="range"]::-ms-thumb {
-  width: 24px;
-  height: 24px;
-  margin-top: 0; 
-
-  background: #607d8b;
-  border: 2px solid #eceff1;
-  border-radius: 12px;
-  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2), 0 0 4px rgba(13, 13, 13, 0.2);
-  cursor: pointer;
 }
 
 .theme {
@@ -2536,6 +2433,10 @@ input:disabled .theme__btn {
   -ms-flex-align: center;
 }
 
+@media (min-width: 768px) {
+  --track-height: 123px;
+}
+
 .slider__range {
   margin-top: 40px;
 }
@@ -3585,4 +3486,111 @@ input:focus + .form-unit__label--checkbox::before {
 
 .form-unit__checkbox:checked + .form-unit__label--checkbox:active::before {
   background-image: none;
+}
+
+[type="range"] {
+  width: 100%; 
+  margin: 12px 0;
+
+  -webkit-appearance: none;
+}
+[type="range"]:focus {
+  outline: 0;
+}
+[type="range"]:focus::-webkit-slider-runnable-track {
+  background: #fbfbfc;
+}
+[type="range"]:focus::-ms-fill-lower {
+  background: #eceff1;
+}
+[type="range"]:focus::-ms-fill-upper {
+  background: #fbfbfc;
+}
+[type="range"]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: var(--track-height);
+
+  background: #eceff1;
+  border: 2px solid #cfd8dc;
+  border-radius: 5px; 
+  -webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2), 0 0 1px rgba(13, 13, 13, 0.2);
+          box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2), 0 0 1px rgba(13, 13, 13, 0.2);
+  cursor: pointer;
+
+  -webkit-transition: all 0.2s ease;
+          transition: all 0.2s ease;
+}
+[type="range"]::-webkit-slider-thumb {
+  width: 24px;
+  height: 24px;
+  margin-top: -4pxvar(--track-height)/2-12px; 
+
+  background: #607d8b;
+  border: 2px solid #eceff1;
+  border-radius: 12px;
+  -webkit-box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2), 0 0 4px rgba(13, 13, 13, 0.2);
+          box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2), 0 0 4px rgba(13, 13, 13, 0.2);
+  cursor: pointer;
+
+  -webkit-appearance: none;
+}
+[type="range"]::-moz-range-track {
+  width: 100%;
+  height: var(--track-height);
+
+  background: #eceff1;
+  border: 2px solid #cfd8dc;
+  border-radius: 5px; 
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2), 0 0 1px rgba(13, 13, 13, 0.2);
+  cursor: pointer;
+
+  -webkit-transition: all 0.2s ease;
+          transition: all 0.2s ease;
+}
+[type="range"]::-moz-range-thumb {
+  width: 24px; 
+  height: 24px;
+
+  background: #607d8b;
+  border: 2px solid #eceff1;
+  border-radius: 12px;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2), 0 0 4px rgba(13, 13, 13, 0.2);
+  cursor: pointer;
+}
+[type="range"]::-ms-track {
+  width: 100%;
+  height: var(--track-height);
+
+  color: transparent; 
+
+  background: transparent;
+  border-width: 12px 0;
+  border-color: transparent;
+  cursor: pointer;
+
+  -webkit-transition: all 0.2s ease;
+          transition: all 0.2s ease;
+}
+[type="range"]::-ms-fill-lower {
+  background: #dde3e6;
+  border: 2px solid #cfd8dc;
+  border-radius: 10px; 
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2), 0 0 1px rgba(13, 13, 13, 0.2);
+}
+[type="range"]::-ms-fill-upper {
+  background: #eceff1;
+  border: 2px solid #cfd8dc;
+  border-radius: 10px; 
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2), 0 0 1px rgba(13, 13, 13, 0.2);
+}
+[type="range"]::-ms-thumb {
+  width: 24px;
+  height: 24px;
+  margin-top: 0; 
+
+  background: #607d8b;
+  border: 2px solid #eceff1;
+  border-radius: 12px;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.2), 0 0 4px rgba(13, 13, 13, 0.2);
+  cursor: pointer;
 }
