--- a/source/sass/blocks/index/program.scss
+++ b/source/sass/blocks/index/program.scss
@@ -8,6 +8,7 @@
   @include desktop {
     padding: 0;
     display: flex;
+    flex-wrap: wrap;
   }
 }
 
@@ -32,7 +33,7 @@
   }
 
   @include desktop {
-    width: 570px;
+    flex: 1 0 460px;
     margin: 40px;
     padding: 25px 50px;
 
